--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -1,15 +1,23 @@
-.Register {
+.register {
   display: flex;
   height: 100vh;
 
-  overflow: hidden;
+  background: #a3a3a3;
+  background: radial-gradient(circle, #a3a3a3 30%, #ffffff 100%);
+}
 
-  background-color: #a3a3a3;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 15px 15px;
+  grid-auto-flow: row;
 }
 
 .image {
   height: 100vh;
-  max-height: 100%;
+  position: fixed;
+  display: none;
 }
 
 .form-wrapper {
@@ -20,17 +28,17 @@
 }
 
 .form {
-  width: 355px;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
 
   gap: 26px;
+
+  /* z-index: 1; */
 }
 
 .input {
-  width: 355px;
+  width: 300px;
   height: 50px;
 
   background-color: #d9d9d9;
@@ -42,18 +50,99 @@
 
   font-size: 20px;
 
-  transition: 150ms;
+  transition-duration: 150ms;
+  border: 1px solid #0000;
+}
+
+.input:hover {
+  box-shadow: 0px 0px 9px 0px rgba(34, 60, 80, 0.26);
 }
 
 .input:focus {
   outline: none;
-  /* border-color: #000f;
-  border-width: 2px; */
+  border: 1px solid #0005;
 }
 
 .input::-webkit-search-cancel-button {
   -webkit-appearance: none;
   appearance: none;
+}
+
+.input[type='date']::-webkit-calendar-picker-indicator {
+  cursor: pointer;
+  transition: 100ms;
+}
+
+.input[type='date'] {
+  cursor: text;
+}
+
+.input[type='date']::-webkit-calendar-picker-indicator:hover {
+  opacity: 0.6;
+}
+
+.input:has(.image-input) {
+  position: relative;
+}
+
+.image-input {
+  display: block;
+  border: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+
+  cursor: pointer;
+}
+
+.image-preview {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+
+  background: #0001;
+  border-radius: 10px;
+  position: absolute;
+  left: 10px;
+}
+
+.input:not(input) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: relative;
+}
+
+.input:not(input):has(input:focus) {
+  border: 1px solid #0005;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.sex-input-container {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 50px;
+  height: 100%;
+}
+
+.sex-input-container input[type='radio'] {
+  width: 25px;
+  cursor: pointer;
+}
+
+.sex-input-container > div {
+  display: flex;
+  gap: 10px;
 }
 
 .submit-btn {
@@ -78,4 +167,36 @@
 .submit-btn:focus,
 .submit-btn:hover {
   background-color: #c5c5c5;
+}
+
+.logined-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
+
+.logined-choises {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.logined-choises button {
+  width: 150px;
+  height: 50px;
+
+  font-family: inherit;
+  font-size: inherit;
+
+  transition-duration: 150ms;
+
+  border: 1px solid #0008;
+  border-radius: 25px;
+
+  cursor: pointer;
+}
+
+.logined-choises button:hover {
+  box-shadow: 0px 0px 9px 0px rgba(34, 60, 80, 0.26);
 }
