--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,4 +2,8 @@
   font-family: 'Inter';
   font-size: 20px;
   color: black;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
