--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,7 @@
   display: flex;
   gap: 15px;
   flex-wrap: wrap;
+  justify-content: space-between;
 
   background-color: #d9d9d9;
   /* height: 30px; */
@@ -64,45 +65,6 @@
 
 .link-wrapper.navigated .underline {
   width: 100%;
-}
-
-.search-area {
-  max-height: 30px;
-  flex: 1;
-
-  display: flex;
-  gap: 10px;
-}
-
-.search-icon {
-  width: 23px;
-  height: 25px;
-  /* display: none; */
-  transform: translateY(2px);
-}
-
-.input {
-  background-color: transparent;
-  border: none;
-
-  border-bottom: 2px solid #0007;
-
-  font-size: 20px;
-  height: 30px;
-  padding: 0;
-
-  transition: 150ms;
-}
-
-.input:focus {
-  outline: none;
-  border-color: #000f;
-  border-width: 2px;
-}
-
-.input::-webkit-search-cancel-button {
-  -webkit-appearance: none;
-  appearance: none;
 }
 
 .account-area {
