--- a/src/pages/SearchPetitions/components/Petition/Petition.module.css
+++ b/src/pages/SearchPetitions/components/Petition/Petition.module.css
@@ -71,11 +71,15 @@
 }
 
 .petition-data {
+  flex-grow: 1;
+
   display: flex;
   flex-direction: column;
   gap: 10px;
 
   position: relative;
+
+  overflow: hidden;
 }
 
 .text {
