some small features slightly improving user experience

--- a/src/pages/Edit/components/NewsPanel/NewsPanel.module.css
+++ b/src/pages/Edit/components/NewsPanel/NewsPanel.module.css
@@ -91,3 +91,9 @@
 .btn:not(:disabled):hover {
   background-color: #c5c5c5;
 }
+
+.link {
+  text-decoration: none;
+  color: black;
+  text-align: center;
+}
