--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -161,10 +161,13 @@
   transition: 150ms;
 
   align-self: center;
+}
+
+.submit-btn:not(:disabled) {
   cursor: pointer;
 }
 
-.submit-btn:hover {
+.submit-btn:not(:disabled):hover {
   background-color: #c5c5c5;
 }
 
