--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,20 @@
 .App {
   font-family: 'Inter';
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
   color: black;
 
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+:root {
+  --font-size-smaller: 12px;
+  --font-size-small: 14px;
+  --font-size-medium: 16px;
+  --font-size-medium-large: 20px;
+  --font-size-large: 25px;
+  --font-size-larger: 30px;
+  --font-size-x-large: 40px;
+  --font-size-xx-large: 60px;
 }
