--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   font-family: 'Inter';
-  font-size: 16px;
+  font-size: var(--font-size-medium);
   color: black;
 }
 
@@ -42,6 +42,6 @@
 
 .title {
   margin: 0 0 10px;
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
   font-weight: bold;
 }
