--- a/src/pages/Create/Create.module.css
+++ b/src/pages/Create/Create.module.css
@@ -18,7 +18,7 @@
   padding: 0 20px;
   box-sizing: border-box;
 
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   margin-bottom: 20px;
 }
@@ -66,7 +66,7 @@
   box-sizing: border-box;
 
   font: inherit;
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   transition: 150ms;
 
