--- a/src/pages/Create/components/Tags/Tags.module.css
+++ b/src/pages/Create/components/Tags/Tags.module.css
@@ -29,7 +29,7 @@
 .input-wrapper {
   position: relative;
 
-  font-size: 16px;
+  font-size: var(--font-size-medium);
 }
 
 .tags {
@@ -91,7 +91,7 @@
   border-radius: 10px;
 
   background-color: #d2d2d2;
-  font-size: 12px;
+  font-size: var(--font-size-smaller);
   padding: 5px 7px;
 
   display: flex;
