--- a/src/pages/Edit/Edit.module.css
+++ b/src/pages/Edit/Edit.module.css
@@ -8,7 +8,7 @@
 }
 
 .editor-label {
-  font-size: 25px;
+  font-size: var*--font-size-large);
   text-align: center;
   margin-bottom: 20px;
 }
@@ -24,7 +24,7 @@
   padding: 0 20px;
   box-sizing: border-box;
 
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   margin-bottom: 15px;
 }
@@ -72,7 +72,7 @@
   box-sizing: border-box;
 
   font: inherit;
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   transition: 150ms;
 
