--- a/src/pages/Edit/components/Editor/Editor.module.css
+++ b/src/pages/Edit/components/Editor/Editor.module.css
@@ -4,7 +4,7 @@
 
   border-radius: 15px;
   text-indent: 24px;
-  font-size: 16px;
+  font-size: var(--font-size-medium);
 
   padding-left: 16px;
   padding-right: 16px;
