--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -25,7 +25,7 @@
   padding: 0 20px;
   box-sizing: border-box;
 
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   transition: 150ms;
 
@@ -74,7 +74,7 @@
   padding: 0 20px;
   box-sizing: border-box;
 
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   transition-duration: 150ms;
   border: 1px solid #0000;
