--- a/src/pages/NotFound/NotFound.module.css
+++ b/src/pages/NotFound/NotFound.module.css
@@ -7,20 +7,20 @@
 }
 
 .status {
-  font-size: 72px;
+  font-size: calc(var(--font-size-xx-large) * 1.2);
   font-weight: 700;
   text-align: center;
 }
 
 .text {
-  font-size: 24px;
+  font-size: var(--font-size-large);
   font-weight: 500;
   text-align: center;
   margin: 10px 0;
 }
 
 .hint {
-  font-size: 16px;
+  font-size: var(--font-size-medium);
   text-align: center;
   line-height: 1.5;
 }
@@ -54,15 +54,15 @@
   }
 
   .status {
-    font-size: 48px;
+    font-size: calc(var(--font-size-x-large) * 1.2);
   }
 
   .text {
-    font-size: 18px;
+    font-size: var(--font-size-medium-large);
   }
 
   .hint {
-    font-size: 14px;
+    font-size: var(--font-size-small);
     padding: 0 10px;
   }
 
