--- a/src/pages/Petition/Petition.module.css
+++ b/src/pages/Petition/Petition.module.css
@@ -44,7 +44,7 @@
 
 .title {
   text-align: center;
-  font-size: 30px;
+  font-size: var(--font-size-larger);
   padding: 0 5px;
 }
 
@@ -63,7 +63,7 @@
   box-sizing: border-box;
 
   font: inherit;
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   transition: 150ms;
 
@@ -113,7 +113,7 @@
   border: 1px solid #fff1f1;
 
   font-family: inherit;
-  font-size: 16px;
+  font-size: var(--font-size-medium);
 
   cursor: pointer;
 }
@@ -158,7 +158,7 @@
   border-radius: 10px;
 
   background-color: #d2d2d2;
-  font-size: 12px;
+  font-size: var(--font-size-smaller);
   padding: 5px 7px;
 
   display: flex;
@@ -168,7 +168,7 @@
 .date {
   margin-top: 15px;
   color: grey;
-  font-size: 16px;
+  font-size: var(--font-size-medium);
 }
 
 .img-placeholder {
