--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -48,7 +48,7 @@
   padding: 0 20px;
   box-sizing: border-box;
 
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   transition-duration: 150ms;
   border: 1px solid #0000;
@@ -156,7 +156,7 @@
   padding: 0 20px;
   box-sizing: border-box;
 
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   transition: 150ms;
 
