--- a/src/pages/SearchPetitions/components/Petition/Petition.module.css
+++ b/src/pages/SearchPetitions/components/Petition/Petition.module.css
@@ -24,7 +24,7 @@
 }
 
 .title {
-  font-size: 30px;
+  font-size: var(--font-size-larger);
 
   overflow: hidden;
   display: -webkit-box;
@@ -62,11 +62,11 @@
   }
 
   .title {
-    font-size: 20px;
+    font-size: var(--font-size-medium-large);
   }
 
   .text {
-    font-size: 16px;
+    font-size: var(--font-size-medium);
   }
 }
 
@@ -117,7 +117,7 @@
   padding: 1px 10px;
   width: fit-content;
 
-  font-size: 14px;
+  font-size: var(--font-size-small);
   color: grey;
 }
 
@@ -132,5 +132,5 @@
 
 .date {
   color: grey;
-  font-size: 16px;
+  font-size: var(--font-size-medium);
 }
