--- a/src/pages/SearchUsers/SearchUsers.module.css
+++ b/src/pages/SearchUsers/SearchUsers.module.css
@@ -30,7 +30,7 @@
   padding: 0 20px;
   box-sizing: border-box;
 
-  font-size: 20px;
+  font-size: var(--font-size-medium-large);
 
   margin: 0 auto;
 }
@@ -125,7 +125,7 @@
   border-radius: 15px;
 
   font: inherit;
-  font-size: 16px;
+  font-size: var(--font-size-medium);
 
   transition: 100ms;
 }
