--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -6,6 +6,24 @@
   background: radial-gradient(circle, #a3a3a3 30%, #ffffff 100%);
 }
 
+.logo-wrapper {
+  position: fixed;
+
+  top: 15px;
+  left: 48px;
+
+  display: flex;
+  align-items: center;
+  gap: 17px;
+  color: black;
+  text-decoration: none;
+}
+
+.logo {
+  width: 28px;
+  height: 28px;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr;
