--- a/src/pages/Home/components/SloganBlock/SloganBlock.module.css
+++ b/src/pages/Home/components/SloganBlock/SloganBlock.module.css
@@ -20,6 +20,8 @@
   display: flex;
   justify-content: center;
   padding-top: 30px;
+
+  overflow: hidden;
 }
 
 .slogan-main-text {
@@ -48,4 +50,10 @@
 .image {
   height: 500px;
   width: 500px;
+}
+
+@media (max-width: 1024px) {
+  .slogan-block {
+    padding: 30px 0px 20px 30px;
+  }
 }
