--- a/src/pages/Home/components/SloganBlock/SloganBlock.module.css
+++ b/src/pages/Home/components/SloganBlock/SloganBlock.module.css
@@ -47,9 +47,29 @@
   font-weight: 500;
 }
 
-.image {
+.image-wrapper {
   height: 500px;
   width: 500px;
+  position: relative;
+  border-radius: 20px;
+}
+
+.image-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+}
+
+.image-wrapper::after {
+  content: '';
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 20px 20px #d9d9d9 inset;
 }
 
 @media (max-width: 1024px) {
