--- a/src/App.module.css
+++ b/src/App.module.css
@@ -18,3 +18,16 @@
   --font-size-x-large: 40px;
   --font-size-xx-large: 60px;
 }
+
+@media (max-width: 768px) {
+  :root {
+    --font-size-smaller: 10px;
+    --font-size-small: 12px;
+    --font-size-medium: 14px;
+    --font-size-medium-large: 16px;
+    --font-size-large: 20px;
+    --font-size-larger: 20px;
+    --font-size-x-large: 30px;
+    --font-size-xx-large: 40px;
+  }
+}
