--- a/src/pages/Home/components/BottomBlock/BottomBlock.module.css
+++ b/src/pages/Home/components/BottomBlock/BottomBlock.module.css
@@ -65,4 +65,19 @@
     width: 80%;
     min-width: fit-content;
   }
+
+  .wrapper {
+    padding: 0 15px;
+    gap: 20px;
+    margin-bottom: 40px;
+  }
+
+  .left-part {
+    font-size: var(--font-size-medium-large);
+  }
+
+  .name {
+    padding: 0;
+    margin-bottom: 20px;
+  }
 }
