--- a/src/pages/Home/components/SloganBlock/SloganBlock.module.css
+++ b/src/pages/Home/components/SloganBlock/SloganBlock.module.css
@@ -5,6 +5,8 @@
   padding: 65px 0px 50px 65px;
 
   background-color: #d9d9d9;
+
+  min-height: 500px;
 }
 
 .left-part {
@@ -75,5 +77,29 @@
 @media (max-width: 1024px) {
   .slogan-block {
     padding: 30px 0px 20px 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .right-part {
+    position: absolute;
+    left: 0;
+    top: 100px;
+    z-index: 0;
+  }
+
+  .slogan-block {
+    padding: 15px 10px 10px 20px;
+  }
+
+  .left-part {
+    z-index: 1;
+  }
+
+  .image-wrapper {
+    width: 100vw;
+
+    filter: blur(1px);
+    opacity: 0.5;
   }
 }
