--- a/src/pages/Petition/Petition.module.css
+++ b/src/pages/Petition/Petition.module.css
@@ -30,6 +30,7 @@
 
 .top-left {
   width: 55%;
+  display: flex;
 }
 
 .top-right {
@@ -197,4 +198,25 @@
   background: #fefefe;
   border: 1px solid #f1f1f1;
   border-radius: 15px;
+}
+
+@media (max-width: 1024px) {
+  .top {
+    flex-direction: column;
+  }
+
+  .top-left {
+    width: 100%;
+  }
+
+  .top-right {
+    width: 100%;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .tags-container {
+    gap: 5px 10px;
+  }
 }
