--- a/src/pages/SearchUsers/SearchUsers.module.css
+++ b/src/pages/SearchUsers/SearchUsers.module.css
@@ -133,12 +133,6 @@
   }
 }
 
-@media (max-width: 768px) {
-  .main {
-    padding: 30px 15px;
-  }
-}
-
 @media (max-width: 1020px) {
   .user {
     max-width: 100%;
@@ -147,7 +141,20 @@
 }
 
 @media (max-width: 768px) {
+  .main {
+    padding: 30px 15px;
+  }
+
   .user {
     min-width: 100%;
+  }
+
+  .page-btns > button {
+    min-width: 100px;
+  }
+
+  .container {
+    gap: 10px;
+    padding: 0;
   }
 }
